Fixed alignment/placement issues with task status. Added infix notation to composition example.

--- a/shortbol/server/jvm/src/main/public/css/shortbol.css
+++ b/shortbol/server/jvm/src/main/public/css/shortbol.css
@@ -411,9 +411,28 @@ pre{
     width: 50%
 }
 
-.exercise .status {
+.exercise .parse_status {
+    text-align: left;
+    padding-left: 5px;
+    float: left;
+    width: 20%;
+}
+
+.exercise .progress {
+    margin: auto;
+    text-align: center;
+}
+
+.exercise .completion {
     text-align: right;
     padding-right: 5px;
+    float: right;
+    width: 20%;
+}
+
+.exercise .status_bar {
+    width: 50%;
+    float: right;
 }
 
 .exercise .force_clear {
